Modify DB, Seed the DB,  Add User Entities

--- a/GastosEmpleados.web/appsettings.json
+++ b/GastosEmpleados.web/appsettings.json
@@ -6,7 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Taxi;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=GastosEmpleados;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 
 }
