--- a/GastosEmpleado.Prism/GastosEmpleado.Prism/GastosEmpleado.Prism.csproj
+++ b/GastosEmpleado.Prism/GastosEmpleado.Prism/GastosEmpleado.Prism.csproj
@@ -5,6 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.DocumentDB" Version="2.10.3" />
+    <PackageReference Include="Plugin.Permissions" Version="6.0.1" />
+    <PackageReference Include="Syncfusion.Xamarin.SfBusyIndicator" Version="18.1.0.44" />
     <PackageReference Include="Xamarin.Forms" Version="4.5.0.617" />
     <PackageReference Include="Prism.DryIoc.Forms" Version="7.2.0.1422" />
     <PackageReference Include="Xamarin.Forms.Maps" Version="4.5.0.617" />
